messaging_app/blue_deployment.yaml
apiVersion:  apps/v1
kind: Deployment 
metadata:
  name: messaging-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app-pod 
      version: blue 
  template:
    metadata:
      labels:
        app: messaging-app-container
        version: blue 
    spec:
      containers:
        - name: messaging-app
          image: bixoloo/messaging-app:2.0
          ports:
            - containerPort: 8000
