messaging_app/green_deployment.yaml
apiVersion:  apps/v1
kind: Deployment 
metadata:
  name: messaging-app-deployment-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app-pod 
      version: green 
  template:
    metadata:
      labels:
        app: messaging-app-container
        version: green
    spec:
      containers:
        - name: messaging-app
          image: bixoloo/messaging-app:green
          ports:
            - containerPort: 8000
