messaging_app/kubeservice.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app-pod
    version: blue # change between green/blue to change traffic
  ports:
   - protocol: TCP 
     port: 8000 # service listens to this
     targetPort: 8000  # the port the container exposes
  type: ClusterIP
